Call charAt(...), lookupHex(...) instead of coding the same ternary-if every time.